--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="one">
             <h1 class="one">
                 Hi
-                <span id="name">Irene</span>
+                <span id="name">Torben</span>
             </h1>
             <p class="two" id="greetingText">I really like your name btw!</p>
         </div>
@@ -39,7 +39,7 @@
         <div class="four">
             <div class="text-box">
                 <p class="hbd-chatbox">
-                Happy birthday to youu!! Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quisquam amet ipsam vitae, voluptatum architecto aliquid id quo error tempora quos aperiam magni necessitatibus quas ut, possimus nesciunt nam ad.
+                Happy birthday to youu!! May you have the best years of your life entering the new world of adulting. Remember, you are loved by the people around you and they are always there for you when you are at your lowest. Don't live a day without a purpose and be your true self each day of your life. Dream big and go for your dreams, because I know what you are capable of doing and you will achieve everything you've ever dreamed of. Best wishes ~ ejvali
                 </p>
                 <p class="fake-btn">Send</p>
             </div>
@@ -65,7 +65,7 @@
         </div>
 
         <div class="six">
-            <img src="./img/irene.jpg" alt="profile" class="profile-picture" id="imagePath"/>
+            <img src="https://api.gluo.xyz/media/avatars/AV_1696105259.webp" alt="profile" class="profile-picture" id="imagePath"/>
             <img src="img/hat.svg" alt="hat" class="hat" />
             <div class="wish">
                 <h3 class="wish-hbd">Happy Birthday!</h3>
